--- a/media/css/cms/flare26-theme.css
+++ b/media/css/cms/flare26-theme.css
@@ -108,6 +108,7 @@ Contextual CSS custom properties that change based on context (e.g. layout direc
     /* Card themes */
     --card-bg-color: var(--token-color-white);
     --card-border-color: var(--token-color-soft-purple);
+    --sticker-card-border-color: var(--token-color-soft-purple);
     --theme-purple-card-bg-color: var(--token-color-soft-purple);
     --theme-purple-card-bullet-color: var(--token-color-purple);
     --theme-dark-purple-card-bg-color: var(--token-color-purple);
@@ -241,6 +242,7 @@ Contextual CSS custom properties that change based on context (e.g. layout direc
     --fl-menu-category-link-hover-bg-color: var(--token-color-link-purple);
 
     /* Cards */
+    --sticker-card-border-color: transparent;
     --fl-step-card-bg: var(--token-color-medium-purple);
     --fl-step-card-index-bg: var(--token-color-dark-purple);
     --fl-theme-illustration-icon-bg: var(--token-color-medium-purple);
@@ -388,6 +390,7 @@ Contextual CSS custom properties that change based on context (e.g. layout direc
     --fl-menu-category-link-hover-bg-color: var(--token-color-soft-purple);
 
     /* Cards */
+    --sticker-card-border-color: var(--token-color-soft-purple);
     --fl-step-card-bg: var(--token-color-cream);
     --fl-step-card-index-bg: var(--token-color-white);
     --fl-theme-illustration-icon-bg: var(--token-color-soft-purple);
@@ -497,6 +500,7 @@ Contextual CSS custom properties that change based on context (e.g. layout direc
         --fl-menu-separator-color: var(--token-color-light-purple);
 
         /* Cards */
+        --sticker-card-border-color: transparent;
         --fl-step-card-bg: var(--token-color-medium-purple);
         --fl-step-card-index-bg: var(--token-color-dark-purple);
         --fl-theme-illustration-icon-bg: var(--token-color-medium-purple);
