--- a/media/css/cms/flare26-template.css
+++ b/media/css/cms/flare26-template.css
@@ -31,6 +31,10 @@ body.fl-modal-open {
     padding-block: 0 var(--fl-theme-main-border-radius);
 }
 
+.fl-body {
+    color: var(--fl-theme-color-text);
+}
+
 .fl-split-page-upper,
 .fl-split-page-lower {
     margin: 0;
